# p2k12

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md  array.h  configure.ac  configure.in  main.c  postgresql.c  postgresql.h  queue.c  queue.h
migrations/: migrate.cfg
migrations/versions/: 001_p2k12_baseline_users_postgresql_downgrade.sql  001_p2k12_baseline_users_postgresql_upgrade.sql  002_p2k12_baseline_postgresql_downgrade.sql  002_p2k12_baseline_postgresql_upgrade.sql  003_baseline_data_postgresql_downgrade.sql  003_baseline_data_postgresql_upgrade.sql  004_audit_postgresql_downgrade.sql  004_audit_postgresql_upgrade.sql  005_dns_postgresql_downgrade.sql  005_dns_postgresql_upgrade.sql  006_p2k12_insert_member_postgresql_downgrade.sql  006_p2k12_insert_member_postgresql_upgrade.sql  007_add_unaudit_table_postgresql_downgrade.sql  007_add_unaudit_table_postgresql_upgrade.sql  008_add_auditing_postgresql_downgrade.sql  008_add_auditing_postgresql_upgrade.sql
scripts/: bill-members.php  bill-new-members.php  gen-stats.gnuplot  gen-stats.sh  nag-negative-balance.php  nag-unpaid-bills.php  process-Innbetalinger.txt.php
